{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 21,
  "lineage": "b6db1df6-629c-3076-a21d-fc4c23e42049",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkInterfaces/public-vm-nic",
            "internal_domain_name_suffix": "x5bxkxtw2ixuzpqi2k5gttsvlc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.20.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
                "subnet_id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet0"
              }
            ],
            "location": "eastus",
            "name": "public-vm-nic",
            "private_ip_address": "10.20.0.4",
            "private_ip_addresses": [
              "10.20.0.4"
            ],
            "resource_group_name": "1ch-rg"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "module.network.azurerm_subnet.subnet_count",
            "module.network.azurerm_subnet.subnet_for_each",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkInterfaces/public-vm-nic|/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "network_interface_id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkInterfaces/public-vm-nic",
            "network_security_group_id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkSecurityGroups/nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg",
            "module.network.azurerm_subnet.subnet_count",
            "module.network.azurerm_subnet.subnet_for_each",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.117.125.109",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "1ch-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkSecurityGroups/1ch-public-vm-nsg",
            "location": "eastus",
            "name": "1ch-public-vm-nsg",
            "resource_group_name": "1ch-rg",
            "security_rule": [],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_count",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet0",
            "name": "1ch-Subnet0",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1ch-rg",
            "virtual_network_name": "1ch-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet1",
            "name": "1ch-Subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1ch-rg",
            "virtual_network_name": "1ch-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet2",
            "name": "1ch-Subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1ch-rg",
            "virtual_network_name": "1ch-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet3",
            "name": "1ch-Subnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1ch-rg",
            "virtual_network_name": "1ch-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_for_each",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5e75c3bf-e276-4c2f-be08-e2be69ce555a",
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet",
            "location": "eastus",
            "name": "1ch-vnet",
            "resource_group_name": "1ch-rg",
            "subnet": [
              {
                "address_prefix": "10.20.0.0/24",
                "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet0",
                "name": "1ch-Subnet0"
              },
              {
                "address_prefix": "10.20.1.0/24",
                "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet1",
                "name": "1ch-Subnet1"
              },
              {
                "address_prefix": "10.20.2.0/24",
                "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet2",
                "name": "1ch-Subnet2"
              },
              {
                "address_prefix": "10.20.3.0/24",
                "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/virtualNetworks/1ch-vnet/subnets/1ch-Subnet3",
                "name": "1ch-Subnet3"
              }
            ],
            "tags": {
              "name": "1ch-vnet"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network.data.azurerm_resource_group.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "location": "eastus",
            "name": "nsg",
            "resource_group_name": "1ch-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "description-http",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443"
                ],
                "direction": "Inbound",
                "name": "https",
                "priority": 202,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "description-http",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "description-myssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "50011"
                ],
                "direction": "Inbound",
                "name": "myssh",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network-security-group.data.azurerm_resource_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "custom_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "description-myssh",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "50011"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/myssh",
            "name": "myssh",
            "network_security_group_name": "nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "1ch-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "description-http",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/http",
            "name": "http",
            "network_security_group_name": "nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "1ch-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "description-http",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "443"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/2153dcaa-22b1-42d6-8ce6-f576f5ecd16d/resourceGroups/1ch-rg/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/https",
            "name": "https",
            "network_security_group_name": "nsg",
            "priority": 202,
            "protocol": "Tcp",
            "resource_group_name": "1ch-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg"
          ]
        }
      ]
    }
  ]
}